--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,11 +3,12 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo Nothing to install
+      - echo "Nothing to install for static site"
   build:
     commands:
-      - echo Build started on `date`
-      - echo No build needed for static files
+      - echo "Build started on `date`"
+      - echo "No build steps required for static files"
 artifacts:
   files:
     - '**/*'
+  discard-paths: no
