--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo "Nothing to install for static site"
+      - echo "Installing dependencies (if any)"
   build:
     commands:
       - echo "Build started on $(date)"
@@ -11,5 +11,11 @@ phases:
 
 artifacts:
   files:
-    - '**/*'
-
+    - index.html
+    - style.css
+    - script.js
+    - icons8-favicon-16.png
+    - appspec.yml
+    - install_dependencies
+    - start_server
+    - stop_server
